crates/smart-config/tests/ui/derives/bogus_param_raw_name.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct TestConfig {
    r#поле: u64,
}

fn main() {}
